# err-stackstorm

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  dev_references.md  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.py  st2.plug  st2.py  st2auth.py  st2pluginactionaliasparser.py  st2pluginapi.py  st2pluginauth.py  test_bot.py  test_err-stackstorm.py  version.json
.circleci/: config.yml
.github/workflows/: main.yml
contrib/docker/: Dockerfile  discord_config.py  docker_build_installer  gitter_config.py  mattermost_config.py  rocketchat_config.py  slack_config.py
contrib/packaging/: README.rst  build  build.cfg  (+1 more)
docs/: action_aliases.rst  authn.rst  authz.rst  conf.py  configuration.rst  dev_references.md  dev_references.rst  getting_started.rst  index.rst  installation.rst  linux_package_building.rst  mattermost  out_of_band_authentication.md  project.rst  quick_start.rst  rbac.rst  show_case.rst  troubleshooting.rst
html/: index.html
lib/: authentication_controller.py  authentication_handler.py  chat_adapters.py  config.py  credentials_adapters.py  enquiry.py  errors.py  session.py  session_manager.py  st2adapters.py  st2outofbandsauth.py  st2pluginapi.py  st2pluginauth.py  st2storeadapters.py  stackstorm_api.py  store_adapters.py
tests/: test_access_control.py  test_auth_handlers.py  test_bot_commands.py  test_chat_adapters.py  test_credentials_manager.py  test_enquiry.py  test_secret_store.py  test_session.py  test_session_manager.py
unittests/: test_err-stackstorm.py
(+25 files in other folders)
